Complete for blade login authentication
